<resources>
    <string name="app_name">Home-Rent-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_label">홈</string>
    <string name="chatting_label">채팅</string>
    <string name="bookmark_label">관심목록</string>
    <string name="profile_label">프로필</string>
    <string name="title_length">%d/20</string>
    <string name="step_one">1</string>
    <string name="step_two">2</string>
    <string name="step_three">3</string>
    <string name="title_label">제 목</string>
    <string name="title_hint">예시) 부경대 정문 월세 200/30</string>
    <string name="room_type_label">매물종류</string>
    <string name="one_room_label">원 룸</string>
    <string name="two_room">투 룸</string>
    <string name="efficiency_label">오피스텔</string>
    <string name="share_house">쉐어하우스</string>
    <string name="three_room">쓰리룸</string>
    <string name="rent_type_label">거래방식</string>
    <string name="monthly_label">월세</string>
    <string name="jeonse_label">전세</string>
    <string name="price_label">가격</string>
    <string name="deposit_label">보증금</string>
    <string name="price_measure">만원</string>
    <string name="maintenance_label">관리비</string>
    <string name="maintenance_hint">관리비 설명(ex, 전기, 수도, 인터넷 포함 등)</string>
    <string name="start_date_label">입주 가능일</string>
    <string name="end_date_label">계약 만료일</string>
    <string name="next">다음으로</string>
    <string name="zero">0</string>
    <string name="back_label">이전으로</string>
    <string name="pic_count">%d/6</string>
    <string name="time_format">yyyy-MM-dd\'T\'HH:mm:ss</string>
    <string name="start_date_format">%s월 %s일 이후 - </string>
    <string name="end_date_format">%s월 %s일</string>
    <string name="deposit_format">예산 월세 %s만원/%s만원</string>
    <string name="term_of_a_contract">%s이후 - %s</string>
    <string name="deposit_and_monthly">월세 %d만원/%d만원</string>
    <string name="deposit">전세 %d만원</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>
    <string name="message_label">간단하게 시작해요!</string>
    <string name="instance_description">양도자에게 메세지 바로 보내기</string>
    <string name="sample_message_one">판매중인 상품에 관심이 있어요!</string>
    <string name="sample_message_two">집을 둘러보고 싶어요!</string>
    <string name="sample_one_wanted">집을 양도하고 싶어요!</string>
    <string name="sample_two_wanted">안녕하세요!아직 집을 구하고 계신가요?</string>
    <string name="detail_info_description">자세히 입력해주실수록 양도자를 찾는 시간이 줄어들어요</string>
    <string name="detail_description_label">상세정보 입력</string>
    <string name="detail_description_contents_label">상세 설명</string>
    <string name="detail_info_hint">이 매물의 특징이 있다면 알려주세요.</string>
    <string name="option_label">옵션</string>
    <string name="conditioner">에어컨</string>
    <string name="washer">세탁기</string>
    <string name="bed">침대</string>
    <string name="refrigerator">냉장고</string>
    <string name="tv">TV</string>
    <string name="closet">옷장</string>
    <string name="detail_info_label">상세 정보</string>
    <string name="elevator">엘레베이터</string>
    <string name="have">있음</string>
    <string name="nothing">없음</string>
    <string name="parking">주차</string>
    <string name="possible">가능</string>
    <string name="impossible">불가</string>
    <string name="balcony">베란다/발코니</string>
    <string name="floor">층수</string>
    <string name="total_floor">전체층</string>
    <string name="current_floor">해당층</string>
    <string name="security">안전 시설</string>
    <string name="cctv">CCTV</string>
    <string name="entrance">공동현관</string>
    <string name="video_phone">비디오 폰</string>
    <string name="add_account">등록하기</string>
    <string name="available_from">입주가능일</string>
    <string name="contract_expires">계약만료일</string>
    <string name="go_chat">채팅하기</string>
    <string name="deposit_simple">보증금 %s</string>
    <string name="monthly_simple">월세 %s</string>
    <string name="price_unit">만원</string>
    <string name="rent_btn_label">%s 내 방 양도하기</string>
    <string name="wanted_btn_label">%s 방 양도 받기</string>
    <string name="page_count">%d/%d</string>
    <string name="bookmark_count_in_detail">관심 %d</string>
    <string name="create_date">%s 등록</string>
    <string name="position_label">위치정보</string>
    <string name="floor_format">%d층/%d층</string>
</resources>
