<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.transfer.step3..AddressSearchFragment">

        <WebView
            android:id="@+id/kakao_address_web_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_step_one"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="false"
                android:text="@string/step_one"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_step_two"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="false"
                android:text="@string/step_two"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_step_three"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:clickable="false"
                android:text="@string/step_three"/>

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tv_locate_second_step"
            style="@style/TextSubtitle1.18.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="위치"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cg_step" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_find_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="@+id/tv_locate_second_step"
            app:layout_constraintTop_toBottomOf="@+id/tv_locate_second_step">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_find_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="주소 검색" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_title_second_step"
            style="@style/TextSubtitle1.18.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="제목"
            app:layout_constraintStart_toStartOf="@id/tv_locate_second_step"
            app:layout_constraintTop_toBottomOf="@+id/til_find_address" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title_second_step"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_second_step">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title_second_step"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="예시) 부경대 정문 월세 200/30"
                android:inputType="text"
                android:maxLength="20" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_margin="15dp"
            android:background="@drawable/custom_button_background"
            android:text="등록하기"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>